# second-brain

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  constraints.md  evals.md  intent.md
.claude/skills/python-arch-review/: SKILL.md
.claude/skills/python-arch-review/references/: architecture-patterns.md  mypy-config.md  review-checklist.md  ruff-config.md  security-checklist.md
.claude/skills/python-arch-review/scripts/: quality_check.py
.github/workflows/: ci.yml  security.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6a9f679dbc20_initial_models.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: containers.py  notes.py  router.py  search.py
backend/app/models/: __init__.py  container.py  note.py  tag.py
backend/app/schemas/: __init__.py  container.py  note.py
backend/app/services/: __init__.py  container_service.py  note_service.py  search_service.py
backend/tests/: conftest.py
backend/tests/factories/: __init__.py  container_factory.py  note_factory.py
backend/tests/integration/: test_containers_api.py  test_notes_api.py  test_search_api.py
backend/tests/unit/: test_container_service.py  test_note_service.py
devdocs/: basb-claudecode-prompt.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: CreateContainerModal.vue  EditorToolbar.vue  ExecutiveSummary.vue  KeyboardShortcutsHelp.vue  MoveNoteModal.vue  NoteCard.vue  ParaSidebar.vue  RichEditor.vue
frontend/src/components/__tests__/: EditorToolbar.spec.ts  ExecutiveSummary.spec.ts  RichEditor.spec.ts
frontend/src/composables/: useKeyboardShortcuts.ts
frontend/src/editor/extensions/: L2Highlight.ts  L3Highlight.ts  index.ts
frontend/src/editor/extensions/__tests__/: highlights.spec.ts
frontend/src/router/: index.ts
frontend/src/stores/: containers.ts  notes.ts
frontend/src/stores/__tests__/: containers.spec.ts  notes.spec.ts
frontend/src/types/: index.ts
frontend/src/views/: ContainerView.vue  Dashboard.vue  Inbox.vue  NoteView.vue  SearchView.vue
thoughts/shared/qrspi/2026-06-29-rag-document-chat/: grounded-option-c-pr.md  grounded-option-c-task.md  questions.md  research-grounded-engine-api.md  research.md  spec.md
